Refactor: 웹훅에서는 상태 변화만 하도록 구현